# Car_Audio

./: .gitignore  BOM.ods  LCD&Touch.txt  LICENSE  README.md  config.txt  get_volumes.sh  i2c5-rtc.dtc  radio.sh  set_front.sh  set_rear.sh  set_volumes.sh  start_weston.sh  vanpi  vanpi.pub  weston.ini  wifi
Programs/: CMakeLists.txt  brightness.cpp  brightness.h  equalizerdialog.cpp  equalizerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h
Programs/MusicPlayer/: CMakeLists.txt  album.cpp  album.h  albumview.cpp  albumview.h  musicplayer.cpp  musicplayer.h  player.cpp  player.h
Programs/Volume/: CMakeLists.txt  main.cpp  volume.cpp  volume.h  volumecontroller.cpp  volumecontroller.h
eeprom/: bootconf.txt
init/: CarAudio.service  brightness.sh  goodix_5d.dtbo  goodix_5d.dts  init.service  launch.sh  poweroff-test.service  poweroff-test.sh  setup_gpio.sh  start.sh
init_old/: poweroff-test.service  poweroff-test.sh  poweroff-test.timer
